--- a/index.html
+++ b/index.html
@@ -1,88 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Tarea 1</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="ico">
+    <title>Proyecto final</title>
 </head>
+<body>
+    <img src="" alt="">
+    <section id="bienvenidos">
+        <article>
+            <h1>Proyecto final programacion webII</h1>
+            <br>
+            <h3>En esta pagina se recapitulan algunas de las tareas vistas en el semestre, asi como una breve explicacion de que hacen</h3>
+            <br>
+            <p>
+            En la siguiente seccion se enumeran las actividades con su respectivo link 
+            </p>
+        </article>
+    </section>
 
-<body class="fondoverde ">
-    <div class="tamañoletra letrablanca">Ejemplo con una tabla</div>
-    <br><br>
-    <table class="tamañoletra bordegris1 tamañocuadro">
-        <tr>
-            <td>
-                <div align="left" class="fondorojo bordenegro marguen">
-                    Fila 1
-                </div>
-            </td>
-        </tr>
-
-        <tr>
-        <tr>
-            <td>
-                <div align="right" class="fondoazul bordenegro marguen">
-                    Fila 2
-                </div>
-            </td>
-        </tr>
-        </tr>
-
-        <tr>
-        <tr>
-            <td>
-                <div align="left" class="fondomorao bordenegro marguen">
-                    Fila 3
-                </div>
-            </td>
-        </tr>
-        </tr>
-    </table>
-
-    <br>
-    <div class="tamañoletra letrablanca">Ejemplo con tres tabla</div>
-    <br><br>
-    <table class="tamañoletra bordegris1 tamañocuadro">
-        <td>
-            <div align="left" class="fondoazul bordenegro">
-                Tabla 1
-            </div>
-        </td>
-    </table>
-    <br> <br>
-    <table class="tamañoletra bordegris3 tamañocuadro">
-        <td>
-            <div align="right" class="fondoamarillo bordenegro">
-                Tabla 2
-            </div>
-        </td>
-    </table>
-    <br> <br>
-    <table class="tamañoletra bordegris4 tamañocuadro">
-        <td>
-            <div align="left" class="fondoblanco bordenegro">
-                Tabla 3
-            </div>
-        </td>
-    </table>
-
-    <br> <br>
-<div class="tamañoletra letrablanca">Ejemplo con 3 div</div>
-
-    <div align="left" class="fondoverdeclaro letrablanca tamañoletra">
-        Div 1
-    </div>
-
-    <div align="right" class="fondorojo letrablanca tamañoletra">
-        Div 2
-    </div>
-
-    <div align="left" class="fondomorao letrablanca tamañoletra">
-        Div 3
-    </div>
+    <table>
+    <tr>   <td><p>Creacion de una pagina web mediante el uso de git y terminal</p><a href="pagina.html"><button>Ejericio 1</button></a></td></tr>
+    <tr>   <td><p>Pseudo codifgos de la clase del (06/09/2022)</p><a href="codigos.html"><button>Ejericio 5</button></a></td></tr>
+    <tr>   <td><p>Primer aplicacion en js</p><a href="primerjs.html"><button>Ejericio 6</button></a></td></tr>
+    <tr>   <td><p>El carrito de compras</p><a href="carrito.html"><button>Ejericio 7</button></a></td></tr>
+</table>
+    
 </body>
-
 </html>
