--- a/pagina.html
+++ b/pagina.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer pagina</title>
+    <title>Grupo random</title>
 </head>
 <body>
+    <h1>El grupo random</h1>
+    <a href="https://github.com/AlexKarashi"><img src="srcs/grupo.jpg" alt="discord con gente rara"></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Quos, ipsum suscipit necessitatibus dolore dolorum saepe laboriosam voluptatem! 
+        Incidunt nihil, alias dignissimos vero esse optio est nobis commodi, ad explicabo aperiam!</p>
+     <h2><p><b> Segundo parrafo </b> llenado de cosas raras y <i>  extrañas </i>simplemente para tener algo que mostrar</p></h2>
+     <p>Y un por si acaso Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam labore a debitis nisi perferendis maiores, officia corporis nihil laudantium voluptates. Vitae magni temporibus dolores iste aliquid, nobis qui illo blanditiis?</p>
+     
+     <tr><a href="index.html"><button>Regreso al index principal</button></a></tr>
     
 </body>
 </html>
