--- a/primerjs.html
+++ b/primerjs.html
@@ -1,12 +1,45 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="Primer JS" href="srcs/primerjs.jpg">
+    <title>Titulo</title>
+<script>
+    alert("Hola desde JS");
+
+</script>
+
 </head>
 <body>
-    
+ <table>
+    <td><img src="srcs/js.png" alt=""></td>
+    <td><h1>Hola y esto de aca se ve?</h1></td>
+ </table>
+    <script>
+        function saludo(){
+            alert("saludo desde el cuerpo con JS");
+        }
+
+
+    </script>
+    <br>
+    <hr>
+    <table>
+        <td><tr><button onclick="saludo()">Clickea aqui, si aqui</button></tr>
+        <tr><td><button onclick="despedir()"> Adiu</button></td></tr>
+        <tr><td><button onclick="moral()">Algo no tan bueno</button></td></tr></td>
+    </table>
+    <table>
+        <td><img src="srcs/primerjs.jpg" alt=""></td>
+    </table>
+<H1>En este ejercicio se vio por primera vez la inclusión y uso de un js en html</H1>
+<h1>Cada boton manda un mensaje distinto dependiendo lo que se le haya asignado en el js</h1>
+
+<a href="index.html"><button>Regreso al index principal</button></a>
 </body>
+<script src="apps/tarea6.js"> 
+
+
+</script>
 </html>
