--- a/carrito.html
+++ b/carrito.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carrito</title>
 </head>
 <body>
+    <section><h1>En este ejerccio se vio el uso de arrays mediante js y otras cosas que sepueden lograr con este </h1></section>
+    <h2>Todo deberia de poder ser visto con inspeccionar</h2>
+    <td><img src="srcs/frutas.jpg" alt="codigo frutas"></td>
+    <table><td>
+    <a href="index.html"><button>Regreso al index principal</button></a></td></table>
     
 </body>
+<script src="apps/tarea7.js"></script>
+
 </html>
