--- a/codigos.html
+++ b/codigos.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="srcs/kara.css">
+    <title>Pseudo codigos</title>
 </head>
 <body>
-    
+    <table>
+    <h1>En esta seccion van los Pseudocodigos vistos en la clase del 06/09/2022</h1>
+        
+    <td><img src="" alt=""></td>
+    <td><img src="" alt=""></td>
+    <tr><table class="tabla1"></table></tr>
+    <td><button onclick="alerta1nom()">Nombre</button></td>
+    <td><button onclick="PreguntaNom()">Pregunta el Nombre</button></td>
+    <td><button onclick="Suma()">Suma</button></td>
+    <td><button onclick=" num1y10()">Adivina entre 1 y 10</button></td>
+    <td><button onclick="numrandom()">Numero random (indica cercania)</button></td>    
+
+</table><td>
+<tr><a href="index.html"><button>Regreso al index principal</button></a></tr></td>
 </body>
+<script src="apps/tarea5.js"></script>
 </html>
