--- a/primerjs.html
+++ b/primerjs.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Primer JS" href="srcs/primerjs.jpg">
+    <link rel="stylesheet" href="srcs/kara.css">
     <title>Titulo</title>
 <script>
     alert("Hola desde JS");
